Nova filtros consulta funcinarios e consulta de aso controle

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -64,6 +64,22 @@
           </ul>
         </li>
 
+        <li class="aw-menu__item  is-active">
+          <a routerLink="/consasocontrole">
+            <i class="fa  fa-fw  fa-file-text"></i><span>Asos</span>
+            <i class="aw-menu__navigation-icon  fa"></i>
+          </a>
+
+          <ul class="aw-menu__list  aw-menu__list--sublist">
+            <li class="aw-menu__item  aw-menu__item--link"><a routerLink="/consfuncionario">Funcionário</a></li>
+            <li class="aw-menu__item  aw-menu__item--link"><a routerLink="/consCliente">Fornecedores</a></li>
+            <li class="aw-menu__item  aw-menu__item--link"><a routerLink="/consCliente">Fase de Obras</a></li>
+            <li class="aw-menu__item  aw-menu__item--link"><a routerLink="/consCliente">Plano Contas</a></li>
+            <li class="aw-menu__item  aw-menu__item--link"><a routerLink="/consCliente">Produtos</a></li>
+            <li class="aw-menu__item  aw-menu__item--link"><a routerLink="/consCliente">Obras</a></li>
+          </ul>
+        </li>
+
 
 
       </ul>
