--- a/src/app/funcionario/consfuncionario/consfuncionario.component.html
+++ b/src/app/funcionario/consfuncionario/consfuncionario.component.html
@@ -16,14 +16,20 @@
       <label for="pesquisanome">Nome</label>
       <input type="text" class="form-control" id="pesquisanome" placeholder="Nome" formControlName="nome">
     </div>
-
+    <div class="form-group col-xs-2" >
+      <label for="funcao">Função</label>
+      <select class="form-control" formControlName="funcao"  [compareWith]="compararFuncao" (change)="setFuncao()">
+          <option *ngFor="let funcao of funcoes" [ngValue]="funcao"> {{ funcao.nome }}</option>
+       </select>
+    </div>
     <div class="form-group col-xs-2" >
         <label for="loja">Loja</label>
         <select class="form-control" formControlName="loja"  [compareWith]="compararLoja" (change)="setLoja()">
             <option *ngFor="let loja of lojas" [ngValue]="loja"> {{ loja.nome }}</option>
          </select>
       </div>
-        <button type="button" style="float:right;" class="btn btn-success" (click)="pesquisarNome()">
+      
+        <button type="button" style="float:right;" class="btn btn-success" (click)="pesquisar()">
           <i class="fa fa-search" aria-hidden="true"></i>
           Pesquisar</button>
           <button type="button" style="margin-left:1%;" class="btn btn-success" (click)="pesquisarLimpar()" title="Limpar a pesquisa">
@@ -31,6 +37,7 @@
               Limpar</button>
   </div>
 </form>
+<br/>
 
 
   <div class="container-fluid" style="width:80%;">
