--- a/src/app/funcionario/cadfuncionario/cadfuncionario.component.html
+++ b/src/app/funcionario/cadfuncionario/cadfuncionario.component.html
@@ -38,8 +38,8 @@
 
                   <div class="form-group col-xs-2">
                     <label for="cbo">CBO</label>
-                    <input type="text" class="form-control" id="cbo" placeholder="CBO" readonly="false" [value]="funcaoSelecionada.cbo"
-                    >
+                    <input type="text" class="form-control" id="cbo" placeholder="CBO" readonly="false"
+                    [value]="funcaoSelecionada.cbo">
                   </div>
                   <div class="form-group col-xs-3" >
                     <label for="loja">Loja</label>
