--- a/src/app/funcionario/cadfuncionario/cadfuncionario.component.html
+++ b/src/app/funcionario/cadfuncionario/cadfuncionario.component.html
@@ -22,8 +22,9 @@
                 <div class="form-group col-xs-2" >
                   <label for="situacao">Situacao</label>
                   <select class="form-control" formControlName="situacao">
-                      <option value="1">Ativo</option>
-                      <option value="0">Inativo</option>
+                      <option value="Ativo">Ativo</option>
+                      <option value="Afastado">Afastado</option>
+                      <option value="Inativo">Inativo</option>
                     </select>
                 </div>
                 <div class="form-group col-xs-2" ></div>
