--- a/src/app/funcionario/consfuncionario/consfuncionario.component.html
+++ b/src/app/funcionario/consfuncionario/consfuncionario.component.html
@@ -12,7 +12,7 @@
 
   <div class="row">
     <div class="form-group col-xs-1" ></div>
-    <div class="form-group col-xs-4" >
+    <div class="form-group col-xs-3" >
       <label for="pesquisanome">Nome</label>
       <input type="text" class="form-control" id="pesquisanome" placeholder="Nome" formControlName="nome">
     </div>
@@ -24,17 +24,28 @@
     </div>
     <div class="form-group col-xs-2" >
         <label for="loja">Loja</label>
-        <select class="form-control" formControlName="loja"  [compareWith]="compararLoja" (change)="setLoja()">
+        <select class="form-control" formControlName="loja"  [compareWith]="compararLoja" (change)="setLoja()" >
             <option *ngFor="let loja of lojas" [ngValue]="loja"> {{ loja.nome }}</option>
          </select>
       </div>
-      
-        <button type="button" style="float:right;" class="btn btn-success" (click)="pesquisar()">
+      <div class="form-group col-xs-2" >
+          <label for="situacao">Situação</label>
+          <select class="form-control" formControlName="situacao">
+              <option value="Ativos">Ativo</option>
+              <option value="Afastado">Afastado</option>
+              <option value="Inativo">Inativo</option>
+            </select>
+        </div>
+       <div class="form-group col-xs-2" >
+          <label ></label>
+          <br/><br/>
+        <button type="button"  class="btn btn-success" (click)="pesquisar()" id="pesquisar">
           <i class="fa fa-search" aria-hidden="true"></i>
           Pesquisar</button>
-          <button type="button" style="margin-left:1%;" class="btn btn-success" (click)="pesquisarLimpar()" title="Limpar a pesquisa">
+          <button type="button" style="margin-left:3%;" class="btn btn-success" (click)="pesquisarLimpar()" title="Limpar a pesquisa">
               <i class="fa fa-ban" aria-hidden="true" ></i>
               Limpar</button>
+      </div>
   </div>
 </form>
 <br/>
@@ -62,28 +73,22 @@
             <tr *ngFor="let f of funcionario">
 
               <td>{{f.nome}}</td>
-              <td>{{f.dataadmissao}}</td>
+              <td>{{f.dataadmissao | date: 'dd/MM/yyyy' }}</td>
               <td>{{ f.funcao.nome }}</td>
               <td>{{ f.funcao.cbo }}</td>
               <td>{{ f.loja.nome }}</td>
-
-                <td>
-                <div *ngIf="f.situacao">
-                <button  class="btn btn-primary">
-                  <i class="fa fa-check-circle-o"></i>
-                </button>
-                </div>
-                <div *ngIf="!f.situacao">
-                  <button  class="btn btn-secondary">
-                    <i class="fa fa-ban"></i>
-                  </button>
-                  </div>
-
-              </td>
+              <td>{{ f.situacao }}</td>
               <td>
-                <button (click)="editar(f)" class="btn btn-success" tolti >
+                <button (click)="editar(f)" class="btn btn-success" data-toggle="tooltip" data-placement="right" title="Tooltip on right" >
                   <i class="fa  fa-pencil"></i>
                 </button>
+              </td>
+              <td>
+                  <div *ngIf="habilitarConsulta">
+                      <button  class="btn btn-info" (click)="selecionarFuncionario(f)" data-toggle="tooltip" data-placement="right" title="Tooltip on right">
+                        <i class="glyphicon glyphicon-ok"></i>
+                      </button>
+                    </div>
               </td>
             </tr>
           </tbody>
