--- a/src/app/asos/consasocontrole/consasocontrole.component.html
+++ b/src/app/asos/consasocontrole/consasocontrole.component.html
@@ -83,7 +83,7 @@
 
             <tr *ngFor="let aso of asoControles" >
               <td >
-              <img src="{{ aso.situacao }}" width='40%'>
+              <img src="#" width='40%'>
               </td>
                     <td>{{ aso.funcionario.nome}}</td>
                     <td>{{ aso.funcionario.funcao.nome}}</td>
