Correcao de datas e salvar

--- a/src/app/funcionario/consfuncionario/consfuncionario.component.html
+++ b/src/app/funcionario/consfuncionario/consfuncionario.component.html
@@ -57,6 +57,7 @@
     <i class="fa fa-plus" aria-hidden="true"></i>
     Novo</button>
   <br/><br/>
+  <div class="table-responsive">
    <table class="table table-striped" >
       <thead>
           <tr>
@@ -93,6 +94,7 @@
             </tr>
           </tbody>
         </table>
+      </div>
 
 
   </div>
