--- a/src/app/asos/cadasocontrole/cadasocontrole.component.html
+++ b/src/app/asos/cadasocontrole/cadasocontrole.component.html
@@ -23,9 +23,10 @@
         </div>
 
       <div class="form-group col-xs-4" >
-          <label for="funcao">Função</label>
-          <input type="text" class="form-control" id="funcao" placeholder="Função" readonly="false"
-          [value]="funcionarioSelecionado.funcao.nome">
+        <label for="funcao">Função</label>
+        <select class="form-control" formControlName="funcao"  [compareWith]="compararFuncao" (change)="setFuncao()">
+            <option *ngFor="let funcao of funcoes" [ngValue]="funcao"> {{ funcao.nome }}</option>
+         </select>
         </div>
 
         <div class="form-group col-xs-3" >
