--- a/src/app/asos/consasocontrole/consasocontrole.component.html
+++ b/src/app/asos/consasocontrole/consasocontrole.component.html
@@ -67,6 +67,7 @@
           <i class="fa fa-plus" aria-hidden="true"></i>
           Novo</button>
         <br/><br/>
+        <div class="table-responsive">
          <table class="table table-striped" >
             <thead>
                 <tr>
@@ -94,7 +95,7 @@
                   </tr>
                 </tbody>
               </table>
-
+</div>
 
         </div>
   </div>
