--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -82,7 +82,7 @@
             </a>
 
             <ul class="aw-menu__list  aw-menu__list--sublist">
-              <li class="aw-menu__item  aw-menu__item--link"><a routerLink="">Lista</a></li>
+              <li class="aw-menu__item  aw-menu__item--link"><a routerLink="/constreinamento">Lista</a></li>
               <li class="aw-menu__item  aw-menu__item--link"><a routerLink="">Relatório</a></li>
             </ul>
           </li>
