--- a/src/app/asos/cadasocontrole/cadasocontrole.component.html
+++ b/src/app/asos/cadasocontrole/cadasocontrole.component.html
@@ -1,60 +1,64 @@
 <br/><br/>
+<div class="page-header">
+  <div class="container-fluid">
+    <h3>
+      Lançcamento de Aso's
+    </h3>
+    <hr/>
+  </div>
 
-<h2 style="margin-left:10%;">Lançamento de Aso</h2>
-<br/>
 
-
-<div style="margin-left:10%;width:80%;">
+<div style="width: 100%;">
 
 
   <form [formGroup]="formularioAsoControle">
   <div class="row">
-      <div class="form-group col-xs-4" >
+      <div class="form-group col-md-4" >
           <label for="nomefuncionario">Nome</label>
           <input type="text" class="form-control" id="nomefuncionario" placeholder="Nome do funcionário"
           [value]="funcionarioSelecionado.nome" readonly="false">
         </div>
 
-        <div class="form-group col-xs-1" >
+        <div class="form-group col-md-1" >
           <br/>
-          <button type="button" class="btn btn-info"  routerLink="/consfuncionario" >
+          <button type="button" class="btn btn-info"  routerLink="/consfuncionario" style="margin-top: 10%" >
               <i class="fa fa-search" aria-hidden="true"></i>
           </button>
         </div>
 
-      <div class="form-group col-xs-4" >
+      <div class="form-group col-md-4" >
         <label for="funcao">Função</label>
         <select class="form-control" formControlName="funcao"  [compareWith]="compararFuncao" (change)="setFuncao()">
             <option *ngFor="let funcao of funcoes" [ngValue]="funcao"> {{ funcao.nome }}</option>
          </select>
         </div>
 
-        <div class="form-group col-xs-3" >
+        <div class="form-group col-md-3" >
           <label for="loja">Loja</label>
           <input type="text" class="form-control" id="loja" placeholder="Loja" readonly="false"
           [value]="funcionarioSelecionado.loja.nome">
         </div>
 
-        <div class="form-group col-xs-2">
+        <div class="form-group col-md-2 col-sm-12">
           <label for="dataexame">Data do Exame</label>
           <input type="date" class="form-control" id="dataexame" placeholder="Data do Exame"
           formControlName="dataexame" >
         </div>
 
-        <div class="form-group col-xs-3" >
+        <div class="form-group col-md-3 col-sm-12" >
           <label for="tipo">Tipo</label>
           <select class="form-control" formControlName="asotipo"  [compareWith]="compararTipo" (change)="setTipo()">
               <option *ngFor="let tipo of tipos" [ngValue]="tipo"> {{ tipo.nome }}</option>
            </select>
         </div>
 
-        <div class="form-group col-xs-2">
+        <div class="form-group col-md-2 col-sm-12">
           <label for="datavencimento">Data Vencimento</label>
           <input type="date" class="form-control" id="datavencimento" placeholder="Data de Vencimento"
           formControlName="datavencimento" >
         </div>
 
-        <div class="form-group col-xs-5" >
+        <div class="form-group col-md-5 col-sm-12" >
           <label for="obs">Observação</label>
           <input type="text" class="form-control" id="obs" placeholder="Observação"
               formControlName="observacao" >
@@ -66,18 +70,24 @@
     </div>
 
 <br/>
-<div style="margin-left:40%;">
-<button type="button" class="btn btn-primary" (click)="salvar()">
-    <i class="fa fa-floppy-o" aria-hidden="true" ></i>
-    Salvar</button>
-    <button type="button" class="btn btn-danger" style="margin-left:1%;" (click)="cancelar()">
-        <i class="fa fa-times" aria-hidden="true"></i>
-        Cancelar</button>
+<div class="w-100 text-right">
+  <button type="button" class="btn btn-primary" (click)="salvar()">
+    <i class="fa fa-floppy-o" aria-hidden="true"></i>
+    Salvar
+  </button>
+  <button type="submit" class="btn btn-danger" style="margin-left:1%;" (click)="cancelar()">
+    <i class="fa fa-times" aria-hidden="true"></i>
+    Cancelar
+  </button>
 
 </div>
+
+
+
 <br/>
 
 
 </form>
 
+</div>
 </div>
