--- a/src/app/asos/consasocontrole/consasocontrole.component.html
+++ b/src/app/asos/consasocontrole/consasocontrole.component.html
@@ -6,98 +6,95 @@
       <br />
     </h3>
     <form [formGroup]="formulario">
-
-        <div class="row">
-            <div class="form-group col-xs-1" ></div>
-            <div class="form-group col-xs-4" >
-              <label for="pesquisanome">Nome</label>
-              <input type="text" class="form-control" id="pesquisanome" placeholder="Nome" formControlName="nome">
-            </div>
-            <div class="form-group col-xs-2" >
-              <label for="funcao">Função</label>
-              <select class="form-control" formControlName="funcao"  [compareWith]="compararFuncao" (change)="setFuncao()">
-                  <option *ngFor="let funcao of funcoes" [ngValue]="funcao"> {{ funcao.nome }}</option>
-               </select>
-            </div>
-            <div class="form-group col-xs-2" >
-                <label for="loja">Loja</label>
-                <select class="form-control" formControlName="loja"  [compareWith]="compararLoja" (change)="setLoja()">
-                    <option *ngFor="let loja of lojas" [ngValue]="loja"> {{ loja.nome }}</option>
-                 </select>
-              </div>
-
-              <div class="form-group col-xs-3"></div>
-              <div class="form-group col-xs-1" ></div>
-              <div class="form-group col-xs-2">
-                <label for="datavencimetoinicial">Vencimento Inicial</label>
-                <input type="date" class="form-control" id="datavencimetoinicial" placeholder="Data Inicial"
-                formControlName="datavencimentoinicial" >
-              </div>
-
-              <div class="form-group col-xs-2">
-                <label for="datavencimetofinal">Vencimento Final</label>
-                <input type="date" class="form-control" id="datavencimetofinal" placeholder="Data Final"
-                formControlName="datavencimentofinal" >
-              </div>
-
-              <div class="form-group col-xs-2" >
-                <label for="tipo">Tipo</label>
-                <select class="form-control" formControlName="tipo"  [compareWith]="compararTipo" (change)="setTipo()">
-                    <option *ngFor="let tipo of tipos" [ngValue]="tipo"> {{ tipo.nome }}</option>
-                 </select>
-              </div>
-              <div class="form-group col-xs-2" >
-                <br/>
-                <br/>
-                <button type="button" style="float:right;" class="btn btn-success" (click)="pesquisar()">
-                  <i class="fa fa-search" aria-hidden="true"></i>
-                  Pesquisar</button>
-                  <button type="button" style="margin-left:1%;" class="btn btn-success" (click)="pesquisarLimpar()" title="Limpar a pesquisa">
-                      <i class="fa fa-ban" aria-hidden="true" ></i>
-                      Limpar</button>
-          </div>
+      <div class="container-fluid" style="width:100%;">
+        <div class="w-100">
+            <accordion [closeOthers]="oneAtATime">
+                <accordion-group heading="Pesquisar" [isOpen]="isFirstOpen">
+                    <div class="row">
+                        <div class="form-group col-md-6">
+                            <label for="pesquisanome">Nome</label>
+                            <input type="text" class="form-control" id="pesquisanome" placeholder="Nome" formControlName="nome">
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label for="funcao">Função</label>
+                            <select class="form-control" formControlName="funcao"  [compareWith]="compararFuncao" (change)="setFuncao()">
+                                <option *ngFor="let funcao of funcoes" [ngValue]="funcao"> {{ funcao.nome }}</option>
+                             </select>
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label for="loja">Loja</label>
+                            <select class="form-control" formControlName="loja"  [compareWith]="compararLoja" (change)="setLoja()">
+                                <option *ngFor="let loja of lojas" [ngValue]="loja"> {{ loja.nome }}</option>
+                             </select>  
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label for="datavencimetoinicial">Vencimento Inicial</label>
+                            <input type="date" class="form-control" id="datavencimetoinicial" placeholder="Data Inicial"
+                              formControlName="datavencimentoinicial" >
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label for="datavencimetofinal">Vencimento Final</label>
+                            <input type="date" class="form-control" id="datavencimetofinal" placeholder="Data Final"
+                              formControlName="datavencimentofinal" >
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label for="tipo">Tipo</label>
+                            <select class="form-control" formControlName="tipo"  [compareWith]="compararTipo" (change)="setTipo()">
+                                <option *ngFor="let tipo of tipos" [ngValue]="tipo"> {{ tipo.nome }}</option>
+                             </select>
+                        </div>
+                        <div class="form-group col-md-12 text-right">
+                            <button type="button" style="float:right;" class="btn btn-success" (click)="pesquisar()">
+                                <i class="fa fa-search" aria-hidden="true"></i>
+                                Pesquisar
+                              </button>
+                              <button type="button" style="margin-left:1%;" class="btn btn-success" (click)="pesquisarLimpar()" title="Limpar a pesquisa">
+                                    <i class="fa fa-ban" aria-hidden="true" ></i>
+                                    Limpar
+                              </button>
+                        </div>
+                    </div>
+                </accordion-group>
+            </accordion>
         </div>
-
-
-    </form>
-
-    <div class="container-fluid" style="width:80%;">
-
-        <button type="button" style="float:right;" class="btn btn-success" routerLink="/cadasocontrole">
-          <i class="fa fa-plus" aria-hidden="true"></i>
-          Novo</button>
-        <br/><br/>
-        <div class="table-responsive">
-         <table class="table table-striped" >
+        <div class="w-100">
+            <button type="button" style="float:right;" class="btn btn-success" routerLink="/cadasocontrole">
+              <i class="fa fa-plus" aria-hidden="true"></i>
+              Novo
+            </button>
+        </div>
+        <table class="table table-striped" >
             <thead>
-                <tr>
-                    <th></th>
-                    <th>Nome</th>
-                    <th>Função</th>
-                    <th>Loja</th>
-                    <th>Tipo</th>
-                    <th>Data Exame</th>
-                    <th>Data Vencimento</th>
-                  </tr>
+                <tr 
+                class="pb-0 card-body align-self-center d-flex flex-column flex-lg-row justify-content-between min-width-zero align-items-lg-center">
+                <th class="col-lg-4 mb-1 text-muted text-small w-sm-100 hidden-lg hidden-md hidden-sm">Situação - Nome</th>
+                <th class="col-lg-4 mb-1 text-muted text-small w-sm-100 hidden-lg hidden-md hidden-xs">Situação - Nome - Função - Loja - Tipo</th>
+                <th class="col-lg-1 mb-1 text-muted text-small w-sm-100 hidden-xs hidden-sm">Situação</th>
+                <th class="col-lg-3 mb-1 text-muted text-small w-sm-100 hidden-xs hidden-sm">Nome</th>
+                <th class="col-lg-2 mb-1 text-muted text-small w-sm-100 hidden-xs hidden-sm">Função</th>
+                <th class="col-lg-2 mb-1 text-muted text-small w-sm-100 hidden-xs hidden-sm">Loja</th>
+                <th class="col-lg-2 mb-1 text-muted text-small w-sm-100 hidden-xs hidden-sm">Tipo</th>
+                <th class="col-lg-1 mb-1 text-muted text-small w-sm-100 hidden-xs hidden-sm">Data Exame</th>
+                <th class="col-lg-2 mb-1 text-muted text-small w-sm-100 hidden-xs hidden-sm">Data Vencimento</th>
+                </tr>  
             </thead>
             <tbody>
+                <tr *ngFor="let aso of asoControles" 
+                  class="pb-0 card-body align-self-center d-flex flex-column flex-lg-row justify-content-between min-width-zero align-items-lg-center">
+                  <td class="col-lg-1 col-xs mb-1 text-muted text-small w-sm-100"><img src="{{aso.situacao}}" width='40%'></td>
+                  <td class="col-lg-3 col-xs mb-1 text-muted text-small w-sm-100"><a [routerLink]="['/listaaso', aso.funcionario.idfuncionario ]" >{{ aso.funcionario.nome}}</a></td>
+                  <td class="col-lg-2 col-xs mb-1 text-muted text-small w-sm-100">{{ aso.funcionario.funcao.nome}}</td>
+                  <td class="col-lg-2 col-xs mb-1 text-muted text-small w-sm-100">{{ aso.funcionario.loja.nome }}</td>
+                  <td class="col-lg-2 col-xs mb-1 text-muted text-small w-sm-100">{{ aso.asotipo.nome }}</td>
+                  <td class="col-lg-1 col-xs mb-1 text-muted text-small w-sm-100 hidden-xs">{{ aso.dataexame | date: 'dd/MM/yyyy' }}</td>
+                  <td class="col-lg-2 col-xs mb-1 text-muted text-small w-sm-100 hidden-xs">{{ aso.datavencimento | date: 'dd/MM/yyyy' }}</td>
+                </tr>
+            </tbody>
+        </table>
 
-            <tr *ngFor="let aso of asoControles" >
-              <td >
-              <img src="{{ aso.situacao}}" width='40%'>
-              </td>
-                    <td><a [routerLink]="['/listaaso', aso.funcionario.idfuncionario ]" >{{ aso.funcionario.nome}}</a></td>
-                    <td>{{ aso.funcionario.funcao.nome}}</td>
-                    <td>{{ aso.funcionario.loja.nome }}</td>
-                    <td>{{ aso.asotipo.nome }}</td>
-                    <td>{{ aso.dataexame | date: 'dd/MM/yyyy' }}</td>
-                    <td>{{ aso.datavencimento | date: 'dd/MM/yyyy' }}</td>
-                  </tr>
-                </tbody>
-              </table>
-</div>
 
-        </div>
+
+      </div>
+    </form>
   </div>
-
 </div>
