--- a/src/app/funcionario/cadfuncionario/cadfuncionario.component.html
+++ b/src/app/funcionario/cadfuncionario/cadfuncionario.component.html
@@ -1,71 +1,89 @@
 <br/><br/>
-<h2 style="margin-left:10%;">Cadastro de Cliente</h2>
+
+<br/><br/>
+<div class="page-header">
+  <div class="container-fluid">
+    <h3>
+      Cadastro de Funcionários
+    </h3>
+    <hr/>
+  </div>
+
+
+<div style="width: 100%;">
+
+
+  <form [formGroup]="formulario">
+  <div class="row">
+      <div class="form-group col-md-6" >
+          <label for="nome">Nome</label>
+          <input type="text" class="form-control" id="nome" placeholder="Nome"
+            formControlName="nome">
+        </div>
+
+      <div class="form-group col-md-3" >
+          <label for="dataadmissao">Data Admissãol</label>
+          <input type="date" class="form-control" id="dataadmissao" placeholder="Data Admissao"
+            formControlName="dataadmissao" >
+        </div>
+
+        <div class="form-group col-md-3" >
+            <label for="situacao">Situacao</label>
+            <select class="form-control" formControlName="situacao">
+                <option value="Ativo">Ativo</option>
+                <option value="Afastado">Afastado</option>
+                <option value="Inativo">Inativo</option>
+            </select>
+        </div>
+
+        <div class="form-group col-md-4 col-sm-12">
+            <label for="funcao">Função</label>
+            <select class="form-control" formControlName="funcao"  [compareWith]="compararFuncao" (change)="setFuncao()">
+                <option *ngFor="let funcao of funcoes" [ngValue]="funcao"> {{ funcao.nome }}</option>
+             </select>
+        </div>
+
+        <div class="form-group col-md-3 col-sm-12" >
+            <label for="cbo">CBO</label>
+            <input type="text" class="form-control" id="cbo" placeholder="CBO" readonly="false"
+              [value]="funcaoSelecionada.cbo">
+        </div>
+
+        <div class="form-group col-md-5 col-sm-12">
+            <label for="loja">Loja</label>
+            <select class="form-control" formControlName="loja"  [compareWith]="compararLoja" (change)="setLoja()">
+                <option *ngFor="let loja of lojas" [ngValue]="loja"> {{ loja.nome }}</option>
+             </select>
+        </div>
+
+       
+
+
+
+
+    </div>
+
 <br/>
-
-<div style="margin-left:10%;width:80%;">
-
-<form [formGroup]="formulario">
-          <div class="row">
-              <div class="form-group col-xs-2" ></div>
-              <div class="form-group col-xs-4" >
-                  <label for="nome">Nome</label>
-                  <input type="text" class="form-control" id="nome" placeholder="Nome"
-                  formControlName="nome">
-                </div>
-
-                <div class="form-group col-xs-2">
-                  <label for="dataadmissao">Data Admissãol</label>
-                  <input type="date" class="form-control" id="dataadmissao" placeholder="Data Admissao"
-                  formControlName="dataadmissao" >
-                </div>
-
-                <div class="form-group col-xs-2" >
-                  <label for="situacao">Situacao</label>
-                  <select class="form-control" formControlName="situacao">
-                      <option value="Ativo">Ativo</option>
-                      <option value="Afastado">Afastado</option>
-                      <option value="Inativo">Inativo</option>
-                    </select>
-                </div>
-                <div class="form-group col-xs-2" ></div>
-
-                <div class="form-group col-xs-2" ></div>
-                <div class="form-group col-xs-3" >
-                    <label for="funcao">Função</label>
-                    <select class="form-control" formControlName="funcao"  [compareWith]="compararFuncao" (change)="setFuncao()">
-                        <option *ngFor="let funcao of funcoes" [ngValue]="funcao"> {{ funcao.nome }}</option>
-                     </select>
-                  </div>
-
-                  <div class="form-group col-xs-2">
-                    <label for="cbo">CBO</label>
-                    <input type="text" class="form-control" id="cbo" placeholder="CBO" readonly="false"
-                    [value]="funcaoSelecionada.cbo">
-                  </div>
-                  <div class="form-group col-xs-3" >
-                    <label for="loja">Loja</label>
-                    <select class="form-control" formControlName="loja"  [compareWith]="compararLoja" (change)="setLoja()">
-                        <option *ngFor="let loja of lojas" [ngValue]="loja"> {{ loja.nome }}</option>
-                     </select>
-                  </div>
-                  <div class="form-group col-xs-2" ></div>
-
-
-
-
-            </div>
-
-    <br/>
-    <div style="margin-left:40%;">
-        <button type="button" class="btn btn-primary" (click)="salvar()">
-            <i class="fa fa-floppy-o" aria-hidden="true" ></i>
-            Salvar</button>
-            <button type="button" class="btn btn-danger" style="margin-left:1%;" (click)="cancelar()">
-                <i class="fa fa-times" aria-hidden="true"></i>
-                Cancelar</button>
-
-      </div>
-      <br/>
-    </form>
+<div class="w-100 text-right">
+  <button type="button" class="btn btn-primary" (click)="salvar()">
+    <i class="fa fa-floppy-o" aria-hidden="true"></i>
+    Salvar
+  </button>
+  <button type="submit" class="btn btn-danger" style="margin-left:1%;" (click)="cancelar()">
+    <i class="fa fa-times" aria-hidden="true"></i>
+    Cancelar
+  </button>
 
 </div>
+
+
+
+<br/>
+
+
+</form>
+
+</div>
+</div>
+
+
