--- a/src/app/funcionario/consfuncionario/consfuncionario.component.html
+++ b/src/app/funcionario/consfuncionario/consfuncionario.component.html
@@ -2,101 +2,99 @@
 <div class="page-header">
   <div class="container-fluid">
     <h3>
-      Cadastros > Funcionário
+      Consulta de Funcionário
       <br/>
     </h3>
-
   </div>
   <form [formGroup]="formulario">
+    <div class="container-fluid" style="width:100%;">
+      <div class="w-100">
+          <accordion [closeOthers]="oneAtATime">
+              <accordion-group heading="Pesquisar" [isOpen]="isFirstOpen">
+                  <div class="row">
+                      <div class="form-group col-md-3" >
+                          <label for="pesquisanome">Nome</label>
+                          <input type="text" class="form-control" id="pesquisanome" placeholder="Nome" formControlName="nome">
+                        </div>
 
+                     
+                        <div class="form-group col-md-2" >
+                            <label for="funcao">Função</label>
+                            <select class="form-control" formControlName="funcao"  [compareWith]="compararFuncao" (change)="setFuncao()">
+                                <option *ngFor="let funcao of funcoes" [ngValue]="funcao"> {{ funcao.nome }}</option>
+                             </select>
+                          </div>
+                          <div class="form-group col-md-2" >
+                              <label for="loja">Loja</label>
+                              <select class="form-control" formControlName="loja"  [compareWith]="compararLoja" (change)="setLoja()" >
+                                  <option *ngFor="let loja of lojas" [ngValue]="loja"> {{ loja.nome }}</option>
+                               </select>
+                            </div>
+                            <div class="form-group col-md-2" >
+                                <label for="situacao">Situação</label>
+                                <select class="form-control" formControlName="situacao">
+                                    <option value="Ativos">Ativo</option>
+                                    <option value="Afastado">Afastado</option>
+                                    <option value="Inativo">Inativo</option>
+                                  </select>
+                              </div>
 
-  <div class="row">
-    <div class="form-group col-xs-1" ></div>
-    <div class="form-group col-xs-3" >
-      <label for="pesquisanome">Nome</label>
-      <input type="text" class="form-control" id="pesquisanome" placeholder="Nome" formControlName="nome">
-    </div>
-    <div class="form-group col-xs-2" >
-      <label for="funcao">Função</label>
-      <select class="form-control" formControlName="funcao"  [compareWith]="compararFuncao" (change)="setFuncao()">
-          <option *ngFor="let funcao of funcoes" [ngValue]="funcao"> {{ funcao.nome }}</option>
-       </select>
-    </div>
-    <div class="form-group col-xs-2" >
-        <label for="loja">Loja</label>
-        <select class="form-control" formControlName="loja"  [compareWith]="compararLoja" (change)="setLoja()" >
-            <option *ngFor="let loja of lojas" [ngValue]="loja"> {{ loja.nome }}</option>
-         </select>
+                              <div class="form-group col-xs-2" >
+                                  <label ></label>
+                                  <br/><br/>
+                                <button type="button"  class="btn btn-success" (click)="pesquisar()" id="pesquisar">
+                                  <i class="fa fa-search" aria-hidden="true"></i>
+                                  Pesquisar</button>
+                                  <button type="button" style="margin-left:3%;" class="btn btn-success" (click)="pesquisarLimpar()" title="Limpar a pesquisa">
+                                      <i class="fa fa-ban" aria-hidden="true" ></i>
+                                      Limpar</button>
+                              </div>
+
+                      
+                  </div>
+              </accordion-group>
+          </accordion>
       </div>
-      <div class="form-group col-xs-2" >
-          <label for="situacao">Situação</label>
-          <select class="form-control" formControlName="situacao">
-              <option value="Ativos">Ativo</option>
-              <option value="Afastado">Afastado</option>
-              <option value="Inativo">Inativo</option>
-            </select>
-        </div>
-       <div class="form-group col-xs-2" >
-          <label ></label>
-          <br/><br/>
-        <button type="button"  class="btn btn-success" (click)="pesquisar()" id="pesquisar">
-          <i class="fa fa-search" aria-hidden="true"></i>
-          Pesquisar</button>
-          <button type="button" style="margin-left:3%;" class="btn btn-success" (click)="pesquisarLimpar()" title="Limpar a pesquisa">
-              <i class="fa fa-ban" aria-hidden="true" ></i>
-              Limpar</button>
+      <div class="w-100">
+          <button type="button" style="float:right;" class="btn btn-success" routerLink="/cadfuncionario">
+            <i class="fa fa-plus" aria-hidden="true"></i>
+            Novo
+          </button>
       </div>
-  </div>
-</form>
-<br/>
-
-
-  <div class="container-fluid" style="width:80%;">
-
-  <button type="button" style="float:right;" class="btn btn-success" routerLink="/cadfuncionario">
-    <i class="fa fa-plus" aria-hidden="true"></i>
-    Novo</button>
-  <br/><br/>
-  <div class="table-responsive">
-   <table class="table table-striped" >
-      <thead>
-          <tr>
-              <th>Nome</th>
-              <th>Data Admissão</th>
-              <th>Função</th>
-              <th>CBO</th>
-              <th>Loja</th>
-              <th>Situação</th>
-            </tr>
-      </thead>
-      <tbody>
-
-            <tr *ngFor="let f of funcionario">
-
-              <td>{{f.nome}}</td>
-              <td>{{f.dataadmissao | date: 'dd/MM/yyyy' }}</td>
-              <td>{{ f.funcao.nome }}</td>
-              <td>{{ f.funcao.cbo }}</td>
-              <td>{{ f.loja.nome }}</td>
-              <td>{{ f.situacao }}</td>
-              <td>
-                <button (click)="editar(f)" class="btn btn-success" data-toggle="tooltip" data-placement="right" title="Tooltip on right" >
-                  <i class="fa  fa-pencil"></i>
-                </button>
-              </td>
-              <td>
-                  <div *ngIf="habilitarConsulta">
-                      <button  class="btn btn-info" (click)="selecionarFuncionario(f)" data-toggle="tooltip" data-placement="right" title="Tooltip on right">
-                        <i class="glyphicon glyphicon-ok"></i>
-                      </button>
-                    </div>
-              </td>
-            </tr>
+      <table class="table table-striped" >
+          <thead>
+              <tr 
+              class="pb-0 card-body align-self-center d-flex flex-column flex-lg-row justify-content-between min-width-zero align-items-lg-center">
+              <th class="col-lg-4 mb-1 text-muted text-small w-sm-100 hidden-lg hidden-md hidden-sm">Nome</th>
+              <th class="col-lg-4 mb-1 text-muted text-small w-sm-100 hidden-lg hidden-md hidden-xs">Nome - Data Admissão - Função</th>
+              <th class="col-lg-3 mb-1 text-muted text-small w-sm-100 hidden-xs hidden-sm">Nome</th>
+              <th class="col-lg-2 mb-1 text-muted text-small w-sm-100 hidden-xs hidden-sm">Data Admissão</th>
+              <th class="col-lg-3 mb-1 text-muted text-small w-sm-100 hidden-xs hidden-sm">Função</th>
+              <th class="col-lg-1 mb-1 text-muted text-small w-sm-100 hidden-xs hidden-sm">CBO</th>
+              <th class="col-lg-2 mb-1 text-muted text-small w-sm-100 hidden-xs hidden-sm">Loja</th>
+              <th class="col-lg-1 mb-1 text-muted text-small w-sm-100 hidden-xs hidden-sm">Situação</th>
+              </tr>  
+          </thead>
+          <tbody>
+              <tr *ngFor="let funcionario of funcionario" 
+                class="pb-0 card-body align-self-center d-flex flex-column flex-lg-row justify-content-between min-width-zero align-items-lg-center">
+                <td class="col-lg-3 col-xs mb-1 text-muted text-small w-sm-100">{{ funcionario.nome}}</td>
+                <td class="col-lg-2 col-xs mb-1 text-muted text-small w-sm-100">{{ funcionario.dataadmissao | date: 'dd/MM/yyyy' }}</td>
+                <td class="col-lg-3 col-xs mb-1 text-muted text-small w-sm-100">{{ funcionario.funcao.nome }}</td>
+                <td class="col-lg-1 col-xs mb-1 text-muted text-small w-sm-100">{{ funcionario.funcao.cbo }}</td>
+                <td class="col-lg-2 col-xs mb-1 text-muted text-small w-sm-100">{{ funcionario.loja.nome }}</td>
+                <td class="col-lg-1 col-xs mb-1 text-muted text-small w-sm-100 hidden-xs">{{ funcionario.situacao }}</td>
+              </tr>
           </tbody>
-        </table>
-      </div>
+      </table>
 
 
-  </div>
+
+    </div>
+  </form>
 </div>
 
+
+
+  
+  
