--- a/src/styles.less
+++ b/src/styles.less
@@ -1,7 +1,9 @@
+/* You can add global styles to this file, and also import other style files */
 @import 'bootstrap/dist/css/bootstrap.min.css';
 @import 'assets/css/algaworks.css';
 @import 'assets/css/algaworks.min.css';
 @import 'assets/css/application.css';
 @import 'assets/css/vendors.css';
-@import 'assets/css/vendors.min.css';
+/*@import 'assets/css/vendors.min.css';*/
+
 @import 'https://use.fontawesome.com/releases/v5.6.3/css/all.css';
