--- a/src/app/funcionario/consfuncionario/consfuncionario.component.html
+++ b/src/app/funcionario/consfuncionario/consfuncionario.component.html
@@ -86,13 +86,13 @@
                 <td class="col-lg-1 col-xs mb-1 text-muted text-small w-sm-100 hidden-xs">{{ funcionario.situacao }}</td>
 
                 <td td class="col-lg-1 col-xs mb-1 text-muted text-small w-sm-100 hidden-xs">
-                  <button (click)="editar( funcionario )" class="btn btn-success" data-toggle="tooltip" data-placement="right" title="Tooltip on right" >
+                  <button (click)="editar( funcionario)" class="btn btn-success" data-toggle="tooltip" data-placement="right" title="Tooltip on right" >
                     <i class="fa  fa-pencil"></i>
                   </button>
                 </td>
                 <td td class="col-lg-1 col-xs mb-1 text-muted text-small w-sm-100 hidden-xs">
                     <div *ngIf="habilitarConsulta">
-                        <button  class="btn btn-info" (click)="selecionarFuncionario(f)" data-toggle="tooltip" data-placement="right" title="Tooltip on right">
+                        <button  class="btn btn-info" (click)="selecionarFuncionario( funcionario )" data-toggle="tooltip" data-placement="right" title="Tooltip on right">
                           <i class="glyphicon glyphicon-ok"></i>
                         </button>
                       </div>
