Criação aso agenda

--- a/src/app/funcionario/cadfuncionario/cadfuncionario.component.html
+++ b/src/app/funcionario/cadfuncionario/cadfuncionario.component.html
@@ -15,26 +15,89 @@
 
   <form [formGroup]="formulario">
   <div class="row">
-      <div class="form-group col-md-6" >
+      <div class="form-group col-md-6" col-sm-12 >
           <label for="nome">Nome</label>
           <input type="text" class="form-control" id="nome" placeholder="Nome"
             formControlName="nome">
         </div>
 
-      <div class="form-group col-md-3" >
-          <label for="dataadmissao">Data Admissãol</label>
+      <div class="form-group col-md-3" col-sm-12>
+          <label for="datanascimento">Data Nascimento</label>
+          <input type="date" class="form-control" id="datanascimento" placeholder="Data Nascimento"
+            formControlName="datanascimento" >
+        </div>
+
+        <div class="form-group col-md-3" col-sm-12>
+          <label for="cpf">CPF</label>
+          <input type="text" class="form-control" id="cpf" placeholder="CPF" [textMask]="{mask: maskCPF}" placeholder="000.000.000-00"
+            formControlName="cpf">
+        </div>
+
+        <div class="form-group col-md-3" col-sm-12>
+          <label for="rg">RG</label>
+          <input type="text" class="form-control" id="rg" placeholder="RG"
+            formControlName="rg">
+        </div>
+
+        <div class="form-group col-md-2 col-sm-12">
+          <label for="uf">UF</label>
+          <select class="form-control" id="uf" formControlName="uf">
+            <option value="AC">AC</option>
+            <option value="AL">AL</option>
+            <option value="AP">AP</option>
+            <option value="BA">BA</option>
+            <option value="CE">CE</option>
+            <option value="DF">DF</option>
+            <option value="ES">ES</option>
+            <option value="GO">GO</option>
+            <option value="MA">MA</option>
+            <option value="MT">MT</option>
+            <option value="MS">MS</option>
+            <option value="MG">MG</option>
+            <option value="PA">PA</option>
+            <option value="PB">PB</option>
+            <option value="PR">PR</option>
+            <option value="PE">PE</option>
+            <option value="PI">PI</option>
+            <option value="RJ">RJ</option>
+            <option value="RN">RN</option>
+            <option value="RS">RS</option>
+            <option value="RO">RO</option>
+            <option value="RR">RR</option>
+            <option value="SE">SE</option>
+            <option value="SC">SC</option>
+            <option value="SP">SP</option>
+            <option value="TO">TO</option>
+          </select>
+        </div>
+
+        <div class="form-group col-md-3" col-sm-12>
+          <label for="pis">PIS</label>
+          <input type="text" class="form-control" id="pis" placeholder="PIS" [textMask]="{mask: maskCPF}" placeholder="000.00000.00.0"
+            formControlName="pis">
+        </div>
+
+        <div class="form-group col-md-2" col-sm-12>
+          <label for="ctps">CTPS</label>
+          <input type="text" class="form-control" id="ctps" placeholder="CTPS"
+            formControlName="ctps">
+        </div>
+
+        <div class="form-group col-md-2" col-sm-12>
+          <label for="serie">Serie</label>
+          <input type="text" class="form-control" id="serie" placeholder="Serie"
+            formControlName="serie">
+        </div>
+
+
+
+        <div class="form-group col-md-3" col-sm-12>
+          <label for="dataadmissao">Data Admissão</label>
           <input type="date" class="form-control" id="dataadmissao" placeholder="Data Admissao"
             formControlName="dataadmissao" >
         </div>
 
-        <div class="form-group col-md-3" >
-            <label for="situacao">Situacao</label>
-            <select class="form-control" formControlName="situacao">
-                <option value="Ativo">Ativo</option>
-                <option value="Afastado">Afastado</option>
-                <option value="Inativo">Inativo</option>
-            </select>
-        </div>
+        
 
         <div class="form-group col-md-4 col-sm-12">
             <label for="funcao">Função</label>
@@ -43,18 +106,34 @@
              </select>
         </div>
 
-        <div class="form-group col-md-3 col-sm-12" >
+        <div class="form-group col-md-2 col-sm-12" >
             <label for="cbo">CBO</label>
             <input type="text" class="form-control" id="cbo" placeholder="CBO" readonly="false"
               [value]="funcaoSelecionada.cbo">
         </div>
 
-        <div class="form-group col-md-5 col-sm-12">
+        <div class="form-group col-md-3 col-sm-12">
+          <label for="setor">Setor</label>
+          <select class="form-control" formControlName="setor"  [compareWith]="compararSetor" (change)="setSetor()">
+              <option *ngFor="let setor of setores" [ngValue]="setor"> {{ setor.nome }}</option>
+           </select>
+      </div>
+
+        <div class="form-group col-md-8 col-sm-12">
             <label for="loja">Loja</label>
             <select class="form-control" formControlName="loja"  [compareWith]="compararLoja" (change)="setLoja()">
                 <option *ngFor="let loja of lojas" [ngValue]="loja"> {{ loja.nome }}</option>
              </select>
         </div>
+
+        <div class="form-group col-md-4" col-sm-12>
+          <label for="situacao">Situacao</label>
+          <select class="form-control" formControlName="situacao">
+              <option value="Ativo">Ativo</option>
+              <option value="Afastado">Afastado</option>
+              <option value="Inativo">Inativo</option>
+          </select>
+      </div>
 
        
 
