--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -62,6 +62,7 @@
             </a>
 
             <ul class="aw-menu__list  aw-menu__list--sublist">
+                <li class="aw-menu__item  aw-menu__item--link"><a routerLink="/consasoaagenda">Agendamento</a></li>
               <li class="aw-menu__item  aw-menu__item--link"><a routerLink="/consasocontrole">Controle</a></li>
               <li class="aw-menu__item  aw-menu__item--link"><a routerLink="">Relatório</a></li>
             </ul>
