--- a/src/app/asos/consasocontrole/consasocontrole.component.html
+++ b/src/app/asos/consasocontrole/consasocontrole.component.html
@@ -81,13 +81,13 @@
             <tbody>
                 <tr *ngFor="let aso of asoControles" 
                   class="pb-0 card-body align-self-center d-flex flex-column flex-lg-row justify-content-between min-width-zero align-items-lg-center">
-                  <td class="col-lg-1 col-xs mb-1 text-muted text-small w-sm-100"><img src="{{aso.situacao}}" width='40%'></td>
+                  <td class="col-lg-1 col-xs mb-1 text-muted text-small w-sm-100"><a [routerLink]="['/listaaso', aso.funcionario.idfuncionario ]" ><img src="{{aso.situacao}}" width='40%'></a></td>
                   <td class="col-lg-3 col-xs mb-1 text-muted text-small w-sm-100"><a [routerLink]="['/listaaso', aso.funcionario.idfuncionario ]" >{{ aso.funcionario.nome}}</a></td>
                   <td class="col-lg-2 col-xs mb-1 text-muted text-small w-sm-100">{{ aso.funcionario.funcao.nome}}</td>
                   <td class="col-lg-2 col-xs mb-1 text-muted text-small w-sm-100">{{ aso.funcionario.loja.nome }}</td>
                   <td class="col-lg-2 col-xs mb-1 text-muted text-small w-sm-100">{{ aso.asotipo.nome }}</td>
                   <td class="col-lg-1 col-xs mb-1 text-muted text-small w-sm-100 hidden-xs">{{ aso.dataexame | date: 'dd/MM/yyyy' }}</td>
-                  <td class="col-lg-2 col-xs mb-1 text-muted text-small w-sm-100 hidden-xs">{{ aso.datavencimento | date: 'dd/MM/yyyy' }}</td>
+                  <td class="col-lg-2 col-xs mb-1 text-muted text-small w-sm-100 hidden-xs"><a [routerLink]="['/cadasocontrole', aso.funcionario.idfuncionario ]" >{{ aso.datavencimento | date: 'dd/MM/yyyy' }}</a></td>
                 </tr>
             </tbody>
         </table>
