--- a/src/app/funcionario/cadfuncionario/cadfuncionario.component.html
+++ b/src/app/funcionario/cadfuncionario/cadfuncionario.component.html
@@ -73,7 +73,7 @@
 
         <div class="form-group col-md-3" col-sm-12>
           <label for="pis">PIS</label>
-          <input type="text" class="form-control" id="pis" placeholder="PIS" [textMask]="{mask: maskCPF}" placeholder="000.00000.00.0"
+          <input type="text" class="form-control" id="pis" placeholder="PIS" [textMask]="{mask: maskPIS}" placeholder="000.00000.00.0"
             formControlName="pis">
         </div>
 
