--- a/src/app/asoagenda/consasoagenda/consasoagenda.component.html
+++ b/src/app/asoagenda/consasoagenda/consasoagenda.component.html
@@ -47,7 +47,7 @@
             </accordion>
         </div>
         <div class="w-100">
-            <button type="button" style="float:right;" class="btn btn-success" routerLink="/cadasoaagenda">
+            <button type="button" style="float:right;" class="btn btn-success" routerLink="/cadasoagenda">
               <i class="fa fa-plus" aria-hidden="true"></i>
               Novo
             </button>
