--- a/src/app/funcionario/consfuncionario/consfuncionario.component.html
+++ b/src/app/funcionario/consfuncionario/consfuncionario.component.html
@@ -34,7 +34,7 @@
               <div class="form-group col-md-2">
                 <label for="situacao">Situação</label>
                 <select class="form-control" formControlName="situacao">
-                  <option value="Ativos">Ativo</option>
+                  <option value="Ativo">Ativo</option>
                   <option value="Afastado">Afastado</option>
                   <option value="Inativo">Inativo</option>
                 </select>
