--- a/src/app/funcionario/cadfuncionario/cadfuncionario.component.html
+++ b/src/app/funcionario/cadfuncionario/cadfuncionario.component.html
@@ -144,7 +144,7 @@
 
 <br/>
 <div class="w-100 text-right">
-  <button type="button" class="btn btn-primary" (click)="salvar()">
+  <button type="submit" class="btn btn-primary" (click)="salvar()">
     <i class="fa fa-floppy-o" aria-hidden="true"></i>
     Salvar
   </button>
