--- a/src/app/asoagenda/consasoagenda/consasoagenda.component.html
+++ b/src/app/asoagenda/consasoagenda/consasoagenda.component.html
@@ -47,7 +47,7 @@
             </accordion>
         </div>
         <div class="w-100">
-            <button type="button" style="float:right;" class="btn btn-success" routerLink="/cadasoagenda">
+            <button type="button" style="float:right;" class="btn btn-success" (click)="novo()" >
               <i class="fa fa-plus" aria-hidden="true"></i>
               Novo
             </button>
@@ -75,7 +75,7 @@
                   <td class="col-lg-2 col-xs mb-1 text-muted text-small w-sm-100 hidden-xs">{{ agenda.dataexame | date: 'dd/MM/yyyy' }}</td>
                   <td class="col-lg-2 col-xs mb-1 text-muted text-small w-sm-100">{{ agenda.situacao }}</td>
                   <td class="col-lg-1 col-xs mb-1 text-muted text-small w-sm-100">
-                      <button (click)="editar( funcionario )" class="btn btn-success hidden-xs hidden-sm"
+                      <button (click)="editar( agenda )" class="btn btn-success hidden-xs hidden-sm"
                         style="margin-top: -9px;float: right">
                         <i class="fa  fa-pencil"></i>
                       </button>
