--- a/src/app/asoagenda/cadasoagenda/cadasoagenda.component.html
+++ b/src/app/asoagenda/cadasoagenda/cadasoagenda.component.html
@@ -16,7 +16,7 @@
         </div>
         <div class="form-group col-md-1 col-sm-12">
           <br />
-          <button type="button" class="btn btn-info" (click)="consultaFuncionario()" style="margin-top: 10%">
+          <button type="button" class="btn btn-info" (click)="consultaFuncionario()" style="margin-top: 10%" disabled="habilitarConsultaFuncionario">
             <i class="fa fa-search" aria-hidden="true"></i>
           </button>
         </div>
